<resources>
    <string name="app_name">ID Card Reader</string>
    <string name="set_pin_msg_1">Set a 4-digit PIN Code</string>
    <string name="set_pin_msg_2">Re-enter the 4-digit PIN Code</string>
    <string name="submit">Submit</string>
    <string name="addBtn">Add Visitor</string>
    <string name="saveBtn">Save Log</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="main_scanIdIn_btn">Scan an entering ID </string>
    <string name="main_scanIdOur_btn">Scan a leaving ID </string>
    <string name="main_manual_entry_btn">Manual Entry </string>
    <string name="main_manual_entry_btn_leaving">Manual Entry Leaving</string>
    <string name="manual_entry_first_name">First Name</string>
    <string name="manual_entry_middle_name">Middle Name</string>
    <string name="manual_entry_last_name">Last Name</string>
    <string name="manual_entry_nationality">Nationality</string>
    <string name="manual_entry_document_type">Type of Document</string>
    <string name="manual_entry_document_number">Document Number</string>
    <string name="manual_entry_destination">Destination</string>
    <string name="message_settings">Manage Account Settings</string>
    <string name="message_settings_two">Change Pin Code</string>
    <string name="message_settings_three">Log Out</string>
    <string name="change_pin_code">Change PIN Code</string>
    <string name="enter_your_old_pin">Enter your old PIN code</string>
    <string name="enter_your_new_pin">Enter your new PIN code</string>
    <string name="re_enter_your_new_pin">Re-enter your new PIN code</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="try_again">Try Again</string>
    <string name="IP">18.130.46.253:8000</string>
    <string name="welcome_msg">Welcome.</string>
    <string name="please_login_msg">Please login.</string>
    <string name="copy_right">2018 \u00a9 ID Card Reader.</string>
    <string name="check_out_visitor">Check Out</string>


    <string-array name="document_type">
        <item>Choose Document Type</item>
        <item>ID Card</item>
        <item>Passport</item>
    </string-array>

</resources>
