<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.merhi.idreader.ManualEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_first_name" />

        <EditText
            android:id="@+id/first_name"
            style="@style/InputFieldManualEntry" />

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_last_name" />

        <EditText
            android:id="@+id/last_name"
            style="@style/InputFieldManualEntry" />

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_nationality" />

        <Spinner
            android:id="@+id/nationality"
            style="@style/SpinnerManualEntry" />

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_document_type" />

        <Spinner
            android:id="@+id/document_type"
            style="@style/SpinnerManualEntry" />

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_document_number" />

        <EditText
            android:id="@+id/document_number"
            style="@style/InputFieldManualEntry"
            android:inputType="number" />

        <TextView
            style="@style/TextViewManualEntry"
            android:text="@string/manual_entry_destination" />

        <Spinner
            android:id="@+id/destination"
            style="@style/SpinnerManualEntry" />
        <Button
            style="@style/BtnSubmit"
            android:id="@+id/submit_btn"
            android:text="@string/submit"/>

    </LinearLayout>


</ScrollView>
