<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.merhi.idreader.Settings">

    <TextView
        android:id="@+id/text_view_settings_one"
        style="@style/TextViewSettings"
        android:text="@string/message_settings" />

    <View
        android:id="@+id/line1"
        style="@style/LineOne"
        android:layout_below="@id/text_view_settings_one" />

    <TextView
        android:id="@+id/text_view_settings_two"
        style="@style/TextViewSettingsTwo"
        android:layout_below="@id/line1"
        android:clickable="true"
        android:onClick="goToChangePin"
        android:text="@string/message_settings_two" />

    <View
        android:id="@+id/line2"
        style="@style/LineTwo"
        android:layout_below="@id/text_view_settings_two" />

    <TextView
        android:id="@+id/text_view_settings_three"
        style="@style/TextViewSettingsTwo"
        android:layout_below="@id/line2"
        android:clickable="true"
        android:text="@string/message_settings_three"
        android:onClick="logOut"/>

    <View
        android:id="@+id/line3"
        style="@style/LineTwo"
        android:layout_below="@id/text_view_settings_three" />



</RelativeLayout>
